# rust_data_engineering

./: LICENSE  README.md
.devcontainer/: devcontainer.json
module_1/: Makefile  README.md
module_1/binaryheap_fruit/: Cargo.toml
module_1/community_detection_kosaraju_algo/: Cargo.toml
module_1/graph-centrality-ufc/: Cargo.toml
module_1/graph_visualise/: Cargo.toml
module_1/hashmap-count/: Cargo.toml
module_1/hashmap-language/: Cargo.toml
module_1/linked_list_fruit_salad/: Cargo.toml
module_1/pagerank/: Cargo.toml
module_1/print_data_structs/: Cargo.toml
module_1/rust_api_server/: Cargo.toml
module_1/shortest_path_dijkstra/: Cargo.toml
module_1/vecdeque-fruit-salads/: Cargo.toml
module_1/vecdeque_queue/: Cargo.toml
module_1/vector_fruit_salad/: Cargo.toml  Makefile
module_2/caeser_cipher_cli/: Cargo.toml
module_2/cli_custom_functions/: Cargo.toml  fruits.csv  write_fruit_salad.csv
module_2/decoder_ring/: Cargo.toml  decode_message.txt
module_2/dining_philosopher/: Cargo.toml
module_2/homophonic_cipher/: Cargo.toml
module_2/mut_fruit_salad/: Cargo.toml
module_2/mutex_lab/: Cargo.toml
module_2/rayon_benchmark/: Cargo.toml
module_2/safety_features/: Cargo.toml
module_3/aws-sdk-rust/: Cargo.toml
module_3/aws-sdk-rust/src/: lib.rs  main.rs
module_3/mlops-polars-cli/: Cargo.toml  README.me
module_3/mlops-polars-cli/data/raw/: World-happiness-stats.csv
module_3/mlops-polars-cli/src/: main.rs
module_4/step-functions-rust/rust-marco/: Cargo.toml  Makefile  README.md
module_4/step-functions-rust/rust-marco/src/: main.rs
(+52 files in other folders)
