[package]
name = "awssdkrust"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS Libs
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.62.0", features = ["rt-tokio"] }
aws-sdk-dynamodb = "1.54.0"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.16"
mime_guess = "2.0.5"
clap = { version = "4.0.32", features = ["derive"] }
humansize = "2.0.0"
# For quick exploration
anyhow = "1.0.93" # use thiserror for prod/libs
