[package]
name = "polars_dataframe_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.34", features = ["lazy", "csv", "ipc", "parquet"] }
rayon = "1.7"
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
apache-arrow = "33.0.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
