[package]
name = "rust-marco"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = "1.0.217"
lambda_runtime = "0.13.0"
tokio = { version = "1.43", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
